[gd_scene load_steps=9 format=3 uid="uid://bl06qjen3kmub"]

[ext_resource type="Script" path="res://Scripts/InvertedPowerGate.gd" id="1_x483l"]
[ext_resource type="Texture2D" uid="uid://djqma3w6qjmhv" path="res://Art/tilemap1.png" id="2_t2e2g"]
[ext_resource type="PackedScene" uid="uid://b2uwc8ksyo7hp" path="res://Scenes/Effects/gate_close_sound.tscn" id="3_127dh"]
[ext_resource type="PackedScene" uid="uid://n6er8h7olg14" path="res://Scenes/Effects/gate_open_sound.tscn" id="4_jwhq6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ecso"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsvqv"]
atlas = ExtResource("2_t2e2g")
region = Rect2(16, 48, 16, 16)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_3bqn1"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, -4, -8, -4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s03vm"]
size = Vector2(16, 16)

[node name="InvertedPowerGate" type="StaticBody2D"]
collision_layer = 17
script = ExtResource("1_x483l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7ecso")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = SubResource("AtlasTexture_dsvqv")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
position = Vector2(0, 6)
occluder = SubResource("OccluderPolygon2D_3bqn1")

[node name="gateClose" parent="." instance=ExtResource("3_127dh")]

[node name="gateOpen" parent="." instance=ExtResource("4_jwhq6")]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_s03vm")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
